--- a/assets/stylesheets/main.css
+++ b/assets/stylesheets/main.css
@@ -89,3 +89,44 @@ Buttons
   border: 1px solid #dfe2e5;
   padding: 10px 30px;
 }
+
+/*
+Home
+*/
+
+.hero {
+  padding: 22px 80px 66px 80px;
+}
+
+
+/*
+clearfix
+*/
+
+.group:before,
+.group:after {
+  content: "";
+  display: table;
+}
+
+.group after {
+  clear: : both
+}
+
+.group {
+  clear: both;;
+  *zoom: 1;
+}
+
+.logo {
+  float:left;
+}
+
+.primary-footer small {
+  float: left;
+}
+
+.primary-footer {
+  padding-bottom: 44px;
+  padding-top: 44px;
+}
