--- a/assets/stylesheets/main.css
+++ b/assets/stylesheets/main.css
@@ -130,3 +130,40 @@ clearfix
   padding-bottom: 44px;
   padding-top: 44px;
 }
+
+section {
+	display: inline-block;
+	margin: 0 1.5%;
+	width: 30%;
+}
+
+.col-1-3 {
+	width: 33.33%;
+}
+
+.col-2-3 {
+	width: 66:66%;
+}
+
+.col-1-3,
+.col-2-3 {
+	display: inline-block;;
+	vertical-align: top;
+}
+
+.grid,
+.col-1-3,
+.col-2-3 {
+	padding-left: 15px;
+	padding-right: 15px;
+}
+
+.container,
+.grid {
+	margin: 0 auto;
+	width: 960px;
+}
+.container {
+	padding-left: 30px;
+	padding-right: 30px;
+}
