--- a/assets/stylesheets/main.css
+++ b/assets/stylesheets/main.css
@@ -81,13 +81,21 @@ Buttons
 
 .btn {
   border-radius: 5px;
+	color: #fff;
+	cursor: pointer;
   display: inline-block;
+	font-weight: 400;
+	letter-spacing: .5px;
   margin: 0;
 }
 
 .btn-alt {
-  border: 1px solid #dfe2e5;
+  border: 1px solid #fff;
   padding: 10px 30px;
+}
+.btn-alt:hover {
+	background: #fff;
+	color: #648880;
 }
 
 /*
@@ -95,7 +103,10 @@ Home
 */
 
 .hero {
+	color: #fff;
+	line-height: 44px;
   padding: 22px 80px 66px 80px;
+	text-align: center;
 }
 
 
@@ -174,6 +185,7 @@ section {
   ========================================
 */
 body {
+	background: #e7711d;
   color: #888;
   font: 300 16px/22px "Lato", "Open Sans", "Helvetica Neue", Helvetica, Arial, sans-serif;
 }
@@ -253,11 +265,7 @@ a {
   float: left;
   font-weight: 400;
 }
-.hero {
-  line-height: 44px;
-  padding: 22px 80px 66px 80px;
-	text-align: center;
-}
+
 .hero h2 {
   font-size: 36px;
 }
@@ -298,4 +306,25 @@ h5 {
 .hero p {
   font-size: 24px;
   font-weight: 100;
+}
+
+.primary-header a,
+.primary-footer a {
+	color: #fff;
+}
+.primary-header a:hover,
+.primary-footer a:hover {
+	color: #648880;
+}
+
+/*
+  ========================================
+  Rows
+  ========================================
+*/
+
+.row {
+  background: #fff;
+  min-width: 960px;
+  padding: 66px 0 44px 0;
 }
