--- a/assets/stylesheets/main.css
+++ b/assets/stylesheets/main.css
@@ -185,7 +185,7 @@ section {
   ========================================
 */
 body {
-	background: #e7711d;
+	background: #293f50;
   color: #888;
   font: 300 16px/22px "Lato", "Open Sans", "Helvetica Neue", Helvetica, Arial, sans-serif;
 }
