--- a/assets/stylesheets/main.css
+++ b/assets/stylesheets/main.css
@@ -319,7 +319,7 @@ h5 {
 
 /*
   ========================================
-  Rows
+  Rows background
   ========================================
 */
 
@@ -327,4 +327,34 @@ h5 {
   background: #fff;
   min-width: 960px;
   padding: 66px 0 44px 0;
+}
+
+.row,
+.row-alt {
+	min-width: 960px;
+}
+.row {
+	background: #fff;
+	padding: 66px 0 44px 0;
+}
+.row-alt {
+	background: : #cbe2c1;
+	background: -webkit-linear-gradient(to right, #a1d3b0, #f6f1d3);
+	background: -moz-linear-gradient(to right, #a1d3b0, #f6f1d3);
+  background: linear-gradient(to right, #a1d3b0, #f6f1d3);
+  padding: 44px 0 22px 0;
+}
+
+/*
+  ========================================
+  Leads
+  ========================================
+*/
+
+.lead {
+  text-align: center;
+}
+.lead p {
+  font-size: 21px;
+  line-height: 33px;
 }
