--- a/assets/stylesheets/main.css
+++ b/assets/stylesheets/main.css
@@ -5,7 +5,7 @@
 }
 
 header {
-	background-image: url(background);
+	background-image: url(background.jpg);
 	height: :100vh;
 	background-size: cover;
 	background-position: center;
