--- a/assets/stylesheets/main.css
+++ b/assets/stylesheets/main.css
@@ -4,9 +4,10 @@
 	padding: 0;
 }
 
-header {
+header
+{
 	background-image: url(background.jpg);
-	height: :100vh;
+	height: 100vh;
 	background-size: cover;
 	background-position: center;
 }
@@ -23,7 +24,8 @@ header {
 	display: inline-block;
 }
 
-.main-nav li a{
+.main-nav li a
+{
 	color:white;
 	text-decoration: none;
 	padding: 5px 20px;
