--- a/assets/stylesheets/main.css
+++ b/assets/stylesheets/main.css
@@ -6,8 +6,10 @@
 
 header
 {
+	img src=
 	background-image: url(background.jpg);
-	height: 100vh;
+	height: auto;
+/*	height: 100vh;*/
 	background-size: cover;
 	background-position: center;
 }
