--- a/assets/stylesheets/main.css
+++ b/assets/stylesheets/main.css
@@ -60,3 +60,20 @@ body
 	max-width: 1200px;
 	margin: auto;
 }
+
+.hero
+ {
+	 position: absolute;
+	 width: 1200px;
+	 margin-left: 0;
+	 margin-top: 0;
+ }
+
+ h1
+ {
+	 color: white;
+	 text-transform: uppercase;
+	 font-size: 70px;
+	 text-align: center;
+	 margin-top: 275px;
+ }
