--- a/assets/stylesheets/main.css
+++ b/assets/stylesheets/main.css
@@ -1,4 +1,9 @@
-*
+{
+	margin: 0;
+	padding: 0;
+}
+
+/*
 {
 	margin: 0;
 	padding: 0;
@@ -86,3 +91,4 @@ body
 	 text-align: center;
 	 margin-top: 275px;
  }
+ */
