--- a/assets/stylesheets/main.css
+++ b/assets/stylesheets/main.css
@@ -3,6 +3,40 @@
 	padding: 0;
 }
 
+header
+{
+	background-image: linear-gradient()rgba(0, 0, 0, 0.5), url(webimage.png);
+	height: 100vh;
+	background-size: cover;
+	background-position: center;
+}
+
+.logo
+{
+	width: 150px;
+	height: auto;
+	float: left;
+}
+
+body
+{
+	font-family: monospace;
+}
+
+.row
+{
+	max-width: 1200px;
+	margin: auto;
+}
+
+h1
+{
+	color: white;
+	text-transform: uppercase;
+	font-size: 70px;
+	text-align: center;
+	margin-top: 275px;
+}
 /*
 {
 	margin: 0;
