--- a/assets/stylesheets/main.css
+++ b/assets/stylesheets/main.css
@@ -37,6 +37,14 @@ h1
 	text-align: center;
 	margin-top: 275px;
 }
+
+.hero
+ {
+	 position: absolute;
+	 width: 1200px;
+	 margin-left: 0;
+	 margin-top: 0;
+ }
 /*
 {
 	margin: 0;
