--- a/assets/stylesheets/main.css
+++ b/assets/stylesheets/main.css
@@ -1,136 +1,69 @@
-{
+/* http://meyerweb.com/eric/tools/css/reset/
+   v2.0 | 20110126
+   License: none (public domain)
+*/
+
+
+html, body, div, span, applet, object, iframe,
+h1, h2, h3, h4, h5, h6, p, blockquote, pre,
+a, abbr, acronym, address, big, cite, code,
+del, dfn, em, img, ins, kbd, q, s, samp,
+small, strike, strong, sub, sup, tt, var,
+b, u, i, center,
+dl, dt, dd, ol, ul, li,
+fieldset, form, label, legend,
+table, caption, tbody, tfoot, thead, tr, th, td,
+article, aside, canvas, details, embed,
+figure, figcaption, footer, header, hgroup,
+menu, nav, output, ruby, section, summary,
+time, mark, audio, video {
 	margin: 0;
 	padding: 0;
+	border: 0;
+	font-size: 100%;
+	font: inherit;
+	vertical-align: baseline;
 }
-
-header
-{
-	background-image: linear-gradient()rgba(0, 0, 0, 0.5), url(webimage.png);
-	height: 100vh;
-	background-size: cover;
-	background-position: center;
+/* HTML5 display-role reset for older browsers */
+article, aside, details, figcaption, figure,
+footer, header, hgroup, menu, nav, section {
+	display: block;
 }
-
-.logo
-{
-	width: 150px;
-	height: auto;
-	float: left;
+body {
+	line-height: 1;
 }
-
-body
-{
-	font-family: monospace;
-}
-
-.row
-{
-	max-width: 1200px;
-	margin: auto;
-}
-
-h1
-{
-	color: white;
-	text-transform: uppercase;
-	font-size: 70px;
-	text-align: center;
-	margin-top: 275px;
-}
-
-.hero
- {
-	 position: absolute;
-	 width: 1200px;
-	 margin-left: 500;
-	 margin-top: 500;
- }
-/*
-{
-	margin: 0;
-	padding: 0;
-}
-
-header
-{
-	background-image: linear-gradient()rgba(0, 0, 0, 0.5), url(webimage.png);
-	height: 100vh;
-	background-size: cover;
-	background-position: center;
-}
-
-.main-nav
-{
-	float: right;
+ol, ul {
 	list-style: none;
-	margin-top: 30px;
+}
+blockquote, q {
+	quotes: none;
+}
+blockquote:before, blockquote:after,
+q:before, q:after {
+	content: '';
+	content: none;
+}
+table {
+	border-collapse: collapse;
+	border-spacing: 0;
 }
 
-.main-nav li
-{
-	display: inline-block;
+.logo {
+  border-top: 4px solid #648880;
+  float: left;
+  font-size: 48px;
+	font-weight: 100;
+	letter-spacing: .5px;
+  line-height: 44px;
+  padding: 40px 0 22px 0;
+	/*text-transform: uppercase;*/
 }
 
-.main-nav li a
-{
-	color:white;
-	text-decoration: none;
-	padding: 5px 20px;
-	font-family: "Roboto", sans-serif;
-	font-size:15px;
+.primary-header a,
+.primary-footer a {
+	color: #fff;
 }
-
-.main-nav li.active a
-{
-	border: 1px solid white;
+.primary-header a:hover,
+.primary-footer a:hover {
+	color: #648880;
 }
-
-.main-nav li a:hover
-{
-	border: 1px solid white;
-}
-
-.logo
-{
-	width: 150px;
-	height: auto;
-	float: left;
-}
-
-body
-{
-	font-family: monospace;
-}
-
-.row
-{
-	max-width: 1200px;
-	margin: auto;
-}
-
-.hero
- {
-	 position: absolute;
-	 width: 1200px;
-	 margin-left: 0;
-	 margin-top: 0;
- }
-
- h1
- {
-	 color: white;
-	 text-transform: uppercase;
-	 font-size: 70px;
-	 text-align: center;
-	 margin-top: 275px;
- }
-
- h2
- {
-	 color: white;
-	 text-transform: uppercase;
-	 font-size: 70px;
-	 text-align: center;
-	 margin-top: 275px;
- }
- */
