--- a/assets/stylesheets/main.css
+++ b/assets/stylesheets/main.css
@@ -79,12 +79,15 @@ table {
   font-size: 14px;
   font-weight: 400;
 	letter-spacing: .5px;
+	text-decoration: none
 }
 .nav li {
   display: inline-block;
   margin: 0 10px;
   vertical-align: top;
+	text-decoration: none;
 }
 .nav li:last-child {
-  margin-right: 30px;
+  margin-right: 100px;
+	text-decoration:none;
 }
