--- a/assets/stylesheets/main.css
+++ b/assets/stylesheets/main.css
@@ -91,3 +91,21 @@ table {
   margin-right: 100px;
 	text-decoration:none;
 }
+
+/*
+-----footer -------
+*/
+.primary-footer small {
+  float: left;
+}
+
+.primary-footer {
+  padding-bottom: 44px;
+  padding-top: 44px;
+}
+
+section {
+	display: inline-block;
+	margin: 0 1.5%;
+	width: 30%;
+}
