--- a/assets/stylesheets/main.css
+++ b/assets/stylesheets/main.css
@@ -109,3 +109,17 @@ section {
 	margin: 0 1.5%;
 	width: 30%;
 }
+
+.container,
+.grid {
+	margin: 0 auto;
+	width: 960px;
+}
+.container {
+	padding-left: 30px;
+	padding-right: 30px;
+}
+
+.lead {
+  text-align: center;
+}
