--- a/assets/stylesheets/main.css
+++ b/assets/stylesheets/main.css
@@ -48,6 +48,41 @@ table {
 	border-spacing: 0;
 }
 
+*,
+*:before,
+*:after {
+  -webkit-box-sizing: border-box;
+  -moz-box-sizing: border-box;
+  box-sizing: border-box;
+}
+
+h1, h2, p
+{
+	margin-bottom: 22px;
+}
+
+.hero {
+	color: #fff;
+	line-height: 44px;
+  padding: 22px 80px 66px 80px;
+	text-align: center;
+}
+
+.group:before,
+.group:after {
+  content: "";
+  display: table;
+}
+
+.group after {
+  clear: : both
+}
+
+.group {
+  clear: both;;
+  *zoom: 1;
+}
+
 .logo {
   border-top: 4px solid #648880;
   float: left;
@@ -97,6 +132,7 @@ table {
 */
 .primary-footer small {
   float: left;
+	font-weight: 400;
 }
 
 .primary-footer {
@@ -122,4 +158,95 @@ section {
 
 .lead {
   text-align: center;
+}
+.lead p {
+  font-size: 21px;
+  line-height: 33px;
+}
+
+/*
+  ========================================
+  Custom styles
+  ========================================
+*/
+body {
+	background: #293f50;
+  color: #888;
+  font: 300 16px/22px "Lato", "Open Sans", "Helvetica Neue", Helvetica, Arial, sans-serif;
+}
+
+h1, h2, h3, h4 {
+  color: #648880;
+}
+h1 {
+  font-size: 36px;
+  line-height: 44px;
+}
+h2 {
+  font-size: 24px;
+  line-height: 44px;
+}
+h3 {
+  font-size: 21px;
+}
+h4 {
+  font-size: 18px;
+}
+h5 {
+  color: #a9b2b9;
+  font-size: 14px;
+  font-weight: 400;
+}
+strong {
+  font-weight: 400;
+}
+cite, em {
+  font-style: italic;
+}
+
+.hero h2 {
+  font-size: 36px;
+}
+.hero p {
+  font-size: 24px;
+}
+
+p {
+  text-align: center;
+}
+
+a {
+  color: #648880;
+  text-decoration: none;
+}
+a:hover {
+  color: #a9b2b9;
+}
+
+/*
+  ========================================
+  Rows background
+  ========================================
+*/
+
+.row {
+  background: #fff;
+  min-width: 960px;
+  padding: 66px 0 44px 0;
+}
+
+.row,
+.row-alt {
+	min-width: 960px;
+}
+.row {
+	background: #fff;
+	padding: 66px 0 44px 0;
+}
+.row-alt {
+	background: : #cbe2c1;
+	background: -webkit-linear-gradient(to right, #a1d3b0, #f6f1d3);
+	background: -moz-linear-gradient(to right, #a1d3b0, #f6f1d3);
+  background: linear-gradient(to right, #a1d3b0, #f6f1d3);
+  padding: 44px 0 22px 0;
 }
