--- a/assets/stylesheets/main.css
+++ b/assets/stylesheets/main.css
@@ -48,6 +48,10 @@ table {
 	border-spacing: 0;
 }
 
+/*
+Grid
+*/
+
 *,
 *:before,
 *:after {
@@ -56,10 +60,47 @@ table {
   box-sizing: border-box;
 }
 
-h1, h2, p
-{
-	margin-bottom: 22px;
+.container {
+  margin: 0 auto;
+  padding-left: 30px;
+  padding-right: 30px;
+  width: 960px;
 }
+
+/*
+Typography
+*/
+
+h1, h2,h3, p {
+  margin-bottom: 22px;
+}
+
+/*
+Buttons
+*/
+
+.btn {
+  border-radius: 5px;
+	color: #fff;
+	cursor: pointer;
+  display: inline-block;
+	font-weight: 400;
+	letter-spacing: .5px;
+  margin: 0;
+}
+
+.btn-alt {
+  border: 1px solid #fff;
+  padding: 10px 30px;
+}
+.btn-alt:hover {
+	background: #fff;
+	color: #648880;
+}
+
+/*
+Home
+*/
 
 .hero {
 	color: #fff;
@@ -67,6 +108,11 @@ h1, h2, p
   padding: 22px 80px 66px 80px;
 	text-align: center;
 }
+
+
+/*
+clearfix
+*/
 
 .group:before,
 .group:after {
@@ -83,56 +129,8 @@ h1, h2, p
   *zoom: 1;
 }
 
-.logo {
-  border-top: 4px solid #648880;
-  float: left;
-  font-size: 24px;
-	font-weight: 60;
-	letter-spacing: .5px;
-  line-height: 44px;
-  padding: 40px 0 22px 0;
-	/*text-transform: uppercase;*/
-}
-
-.primary-header a,
-.primary-footer a {
-	color: #fff;
-}
-.primary-header a:hover,
-.primary-footer a:hover {
-	color: #648880;
-}
-
-/*
------------ Navigation ------------
-*/
-.nav {
-  text-align: right;
-	text-decoration: none;
-}
-.primary-nav {
-  font-size: 14px;
-  font-weight: 400;
-	letter-spacing: .5px;
-	text-decoration: none
-}
-.nav li {
-  display: inline-block;
-  margin: 0 10px;
-  vertical-align: top;
-	text-decoration: none;
-}
-.nav li:last-child {
-  margin-right: 100px;
-	text-decoration:none;
-}
-
-/*
------footer -------
-*/
 .primary-footer small {
   float: left;
-	font-weight: 400;
 }
 
 .primary-footer {
@@ -146,6 +144,27 @@ section {
 	width: 30%;
 }
 
+.col-1-3 {
+	width: 33.33%;
+}
+
+.col-2-3 {
+	width: 66:66%;
+}
+
+.col-1-3,
+.col-2-3 {
+	display: inline-block;;
+	vertical-align: top;
+}
+
+.grid,
+.col-1-3,
+.col-2-3 {
+	padding-left: 15px;
+	padding-right: 15px;
+}
+
 .container,
 .grid {
 	margin: 0 auto;
@@ -154,14 +173,6 @@ section {
 .container {
 	padding-left: 30px;
 	padding-right: 30px;
-}
-
-.lead {
-  text-align: center;
-}
-.lead p {
-  font-size: 21px;
-  line-height: 33px;
 }
 
 /*
@@ -203,12 +214,62 @@ strong {
 cite, em {
   font-style: italic;
 }
+/*
+  ========================================
+  Links
+  ========================================
+*/
+
+a:hover {
+  color: #a9b2b9;
+}
+a {
+  color: #648880;
+}
+
+.logo {
+  border-top: 4px solid #648880;
+  float: left;
+  font-size: 48px;
+	font-weight: 100;
+	letter-spacing: .5px;
+  line-height: 44px;
+  padding: 40px 0 22px 0;
+	/*text-transform: uppercase;*/
+}
+.tagline {
+  margin: 66px 0 22px 0;
+	text-align: right;
+}
+.primary-nav {
+  font-size: 14px;
+  font-weight: 400;
+	letter-spacing: .5px;
+/*	text-transform: uppercase;*/
+}
+.nav {
+  text-align: right;
+}
+
+.primary-footer {
+  color: #648880;
+  font-size: 14px;
+  padding-bottom: 44px;
+  padding-top: 44px;
+}
+.primary-footer small {
+  float: left;
+  font-weight: 400;
+}
 
 .hero h2 {
   font-size: 36px;
 }
 .hero p {
   font-size: 24px;
+}
+.teaser a:hover h3 {
+  color: #a9b2b9;
 }
 
 p {
@@ -221,6 +282,35 @@ a {
 }
 a:hover {
   color: #a9b2b9;
+}
+
+/*
+Link underlining
+*/
+
+p a {
+  border-bottom: 1px solid #dfe2e5;
+}
+
+h5 {
+  color: #a9b2b9;
+  font-size: 14px;
+  font-weight: 400;
+/*  text-transform: uppercase;*/
+}
+
+.hero p {
+  font-size: 24px;
+  font-weight: 100;
+}
+
+.primary-header a,
+.primary-footer a {
+	color: #fff;
+}
+.primary-header a:hover,
+.primary-footer a:hover {
+	color: #648880;
 }
 
 /*
@@ -249,4 +339,26 @@ a:hover {
 	background: -moz-linear-gradient(to right, #a1d3b0, #f6f1d3);
   background: linear-gradient(to right, #a1d3b0, #f6f1d3);
   padding: 44px 0 22px 0;
+}
+
+/*
+  ========================================
+  Leads
+  ========================================
+*/
+
+.lead {
+  text-align: center;
+}
+.lead p {
+  font-size: 21px;
+  line-height: 33px;
+}
+.nav li {
+  display: inline-block;
+  margin: 0 10px;
+  vertical-align: top;
+}
+.nav li:last-child {
+  margin-right: 0;
 }
