--- a/assets/stylesheets/main.css
+++ b/assets/stylesheets/main.css
@@ -1,364 +1,181 @@
-/* http://meyerweb.com/eric/tools/css/reset/
-   v2.0 | 20110126
-   License: none (public domain)
-*/
-
-
-html, body, div, span, applet, object, iframe,
-h1, h2, h3, h4, h5, h6, p, blockquote, pre,
-a, abbr, acronym, address, big, cite, code,
-del, dfn, em, img, ins, kbd, q, s, samp,
-small, strike, strong, sub, sup, tt, var,
-b, u, i, center,
-dl, dt, dd, ol, ul, li,
-fieldset, form, label, legend,
-table, caption, tbody, tfoot, thead, tr, th, td,
-article, aside, canvas, details, embed,
-figure, figcaption, footer, header, hgroup,
-menu, nav, output, ruby, section, summary,
-time, mark, audio, video {
-	margin: 0;
-	padding: 0;
-	border: 0;
-	font-size: 100%;
-	font: inherit;
-	vertical-align: baseline;
-}
-/* HTML5 display-role reset for older browsers */
-article, aside, details, figcaption, figure,
-footer, header, hgroup, menu, nav, section {
-	display: block;
-}
+html,
 body {
-	line-height: 1;
+  height: 100%;
+  width: 100%;
 }
-ol, ul {
-	list-style: none;
-}
-blockquote, q {
-	quotes: none;
-}
-blockquote:before, blockquote:after,
-q:before, q:after {
-	content: '';
-	content: none;
-}
-table {
-	border-collapse: collapse;
-	border-spacing: 0;
-}
-
-/*
-Grid
-*/
-
-*,
-*:before,
-*:after {
-  -webkit-box-sizing: border-box;
-  -moz-box-sizing: border-box;
-  box-sizing: border-box;
-}
-
-.container {
-  margin: 0 auto;
-  padding-left: 30px;
-  padding-right: 30px;
-  width: 960px;
-}
-
-/*
-Typography
-*/
-
-h1, h2,h3, p {
-  margin-bottom: 22px;
-}
-
-/*
-Buttons
-*/
-
-.btn {
-  border-radius: 5px;
-	color: #fff;
-	cursor: pointer;
-  display: inline-block;
-	font-weight: 400;
-	letter-spacing: .5px;
-  margin: 0;
-}
-
-.btn-alt {
-  border: 1px solid #fff;
-  padding: 10px 30px;
-}
-.btn-alt:hover {
-	background: #fff;
-	color: #648880;
-}
-
-/*
-Home
-*/
-
-.hero {
-	color: #fff;
-	line-height: 44px;
-  padding: 22px 80px 66px 80px;
-	text-align: center;
-}
-
-
-/*
-clearfix
-*/
-
-.group:before,
-.group:after {
-  content: "";
-  display: table;
-}
-
-.group after {
-  clear: : both
-}
-
-.group {
-  clear: both;;
-  *zoom: 1;
-}
-
-.primary-footer small {
-  float: left;
-}
-
-.primary-footer {
-  padding-bottom: 44px;
-  padding-top: 44px;
+.navbar-toggle{
+  color: lightgrey;
 }
 
 section {
-	display: inline-block;
-	margin: 0 1.5%;
-	width: 30%;
+  padding: 60px 0;
 }
-
-.col-1-3 {
-	width: 33.33%;
-}
-
-.col-2-3 {
-	width: 66:66%;
-}
-
-.col-1-3,
-.col-2-3 {
-	display: inline-block;;
-	vertical-align: top;
-}
-
-.grid,
-.col-1-3,
-.col-2-3 {
-	padding-left: 15px;
-	padding-right: 15px;
-}
-
-.container,
-.grid {
-	margin: 0 auto;
-	width: 960px;
-}
-.container {
-	padding-left: 30px;
-	padding-right: 30px;
-}
-
-/*
-  ========================================
-  Custom styles
-  ========================================
-*/
-body {
-	background: #293f50;
-  color: #888;
-  font: 300 16px/22px "Lato", "Open Sans", "Helvetica Neue", Helvetica, Arial, sans-serif;
-}
-
-h1, h2, h3, h4 {
-  color: #648880;
-}
-h1 {
-  font-size: 36px;
-  line-height: 44px;
-}
-h2 {
-  font-size: 24px;
-  line-height: 44px;
-}
-h3 {
-  font-size: 21px;
-}
-h4 {
-  font-size: 18px;
-}
-h5 {
-  color: #a9b2b9;
-  font-size: 14px;
-  font-weight: 400;
-}
-strong {
-  font-weight: 400;
-}
-cite, em {
-  font-style: italic;
-}
-/*
-  ========================================
-  Links
-  ========================================
-*/
-
-a:hover {
-  color: #a9b2b9;
-}
-a {
-  color: #648880;
-}
-
-.logo {
-  border-top: 4px solid #648880;
-  float: left;
-  font-size: 48px;
-	font-weight: 100;
-	letter-spacing: .5px;
-  line-height: 44px;
-  padding: 40px 0 22px 0;
-	/*text-transform: uppercase;*/
-}
-.tagline {
-  margin: 66px 0 22px 0;
-	text-align: right;
-}
-.primary-nav {
-  font-size: 14px;
-  font-weight: 400;
-	letter-spacing: .5px;
-/*	text-transform: uppercase;*/
-}
-.nav {
-  text-align: right;
-}
-
-.primary-footer {
-  color: #648880;
-  font-size: 14px;
-  padding-bottom: 44px;
-  padding-top: 44px;
-}
-.primary-footer small {
-  float: left;
-  font-weight: 400;
-}
-
-.hero h2 {
-  font-size: 36px;
-}
-.hero p {
-  font-size: 24px;
-}
-.teaser a:hover h3 {
-  color: #a9b2b9;
-}
-
-p {
+header {
+  position: relative;
+  width: 100%;
+  min-height: auto;
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  background-size: cover;
+  -o-background-size: cover;
+  background-position: center;
+  background-image: url("dance.jpg");
   text-align: center;
+  color: white;
+}
+header .header-content {
+  position: relative;
+  text-align: center;
+  padding: 100px 15px 100px;
+  width: 100%;
+}
+header .header-content .header-content-inner h1 {
+  font-weight: 700;
+  text-transform: uppercase;
+  margin-top: 0;
+  margin-bottom: 0;
+  font-size: 30px;
+}
+header .header-content .header-content-inner hr {
+  margin: 30px auto;
+}
+header .header-content .header-content-inner p {
+  font-weight: 300;
+  color: rgba(255, 255, 255, 0.7);
+  font-size: 16px;
+  margin-bottom: 50px;
+}
+@media (min-width: 768px) {
+  header {
+    min-height: 100%;
+  }
+  header .header-content {
+    position: absolute;
+    top: 50%;
+    -webkit-transform: translateY(-50%);
+    -ms-transform: translateY(-50%);
+    transform: translateY(-50%);
+    padding: 0 50px;
+  }
+  header .header-content .header-content-inner {
+    max-width: 1000px;
+    margin-left: auto;
+    margin-right: auto;
+  }
+  header .header-content .header-content-inner h1 {
+    font-size: 50px;
+  }
+  header .header-content .header-content-inner p {
+    font-size: 18px;
+    max-width: 80%;
+    margin-left: auto;
+    margin-right: auto;
+  }
+}
+.about-section{
+	background-color: #AEC8ED;
+	color: #865D57;
 }
 
-a {
-  color: #648880;
-  text-decoration: none;
+.blog-section{
+  background-color: #254321;
+  color: white;
 }
-a:hover {
-  color: #a9b2b9;
-}
-
-/*
-Link underlining
-*/
-
-p a {
-  border-bottom: 1px solid #dfe2e5;
+.projects-border > div{
+	border:solid 2px #F4F4F4;
+	background-color:#F4F4F4;
 }
 
-h5 {
-  color: #a9b2b9;
-  font-size: 14px;
-  font-weight: 400;
-/*  text-transform: uppercase;*/
+.project-section{
+  background-color: #937044;
 }
 
-.hero p {
-  font-size: 24px;
-  font-weight: 100;
+/* For the hover effect */
+
+.hovereffect {
+  width: 100%;
+  height: 100%;
+  float: left;
+  overflow: hidden;
+  position: relative;
+  text-align: center;
+  cursor: default;
+  background: #42b078;
 }
 
-.primary-header a,
-.primary-footer a {
-	color: #fff;
-}
-.primary-header a:hover,
-.primary-footer a:hover {
-	color: #648880;
+.hovereffect .overlay {
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  overflow: hidden;
+  top: 0;
+  left: 0;
+  padding: 50px 20px;
 }
 
-/*
-  ========================================
-  Rows background
-  ========================================
-*/
+.hovereffect img {
+  display: block;
+  position: relative;
+  max-width: none;
+  width: calc(100% + 20px);
+  -webkit-transition: opacity 0.35s, -webkit-transform 0.35s;
+  transition: opacity 0.35s, transform 0.35s;
+  -webkit-transform: translate3d(-10px,0,0);
+  transform: translate3d(-10px,0,0);
+  -webkit-backface-visibility: hidden;
+  backface-visibility: hidden;
+}
 
-.row {
+.hovereffect:hover img {
+  opacity: 0.4;
+  filter: alpha(opacity=40);
+  -webkit-transform: translate3d(0,0,0);
+  transform: translate3d(0,0,0);
+}
+
+.hovereffect h2 {
+  text-transform: uppercase;
+  color: #fff;
+  text-align: center;
+  position: relative;
+  font-size: 17px;
+  overflow: hidden;
+  padding: 0.5em 0;
+  background-color: transparent;
+}
+
+.hovereffect h2:after {
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  width: 100%;
+  height: 2px;
   background: #fff;
-  min-width: 960px;
-  padding: 66px 0 44px 0;
+  content: '';
+  -webkit-transition: -webkit-transform 0.35s;
+  transition: transform 0.35s;
+  -webkit-transform: translate3d(-100%,0,0);
+  transform: translate3d(-100%,0,0);
 }
 
-.row,
-.row-alt {
-	min-width: 960px;
-}
-.row {
-	background: #fff;
-	padding: 66px 0 44px 0;
-}
-.row-alt {
-	background: : #cbe2c1;
-	background: -webkit-linear-gradient(to right, #a1d3b0, #f6f1d3);
-	background: -moz-linear-gradient(to right, #a1d3b0, #f6f1d3);
-  background: linear-gradient(to right, #a1d3b0, #f6f1d3);
-  padding: 44px 0 22px 0;
+.hovereffect:hover h2:after {
+  -webkit-transform: translate3d(0,0,0);
+  transform: translate3d(0,0,0);
 }
 
-/*
-  ========================================
-  Leads
-  ========================================
-*/
+.hovereffect a, .hovereffect p {
+  color: #FFF;
+  opacity: 0;
+  filter: alpha(opacity=0);
+  -webkit-transition: opacity 0.35s, -webkit-transform 0.35s;
+  transition: opacity 0.35s, transform 0.35s;
+  -webkit-transform: translate3d(100%,0,0);
+  transform: translate3d(100%,0,0);
+}
 
-.lead {
-  text-align: center;
-}
-.lead p {
-  font-size: 21px;
-  line-height: 33px;
-}
-.nav li {
-  display: inline-block;
-  margin: 0 10px;
-  vertical-align: top;
-}
-.nav li:last-child {
-  margin-right: 0;
+.hovereffect:hover a, .hovereffect:hover p {
+  opacity: 1;
+  filter: alpha(opacity=100);
+  -webkit-transform: translate3d(0,0,0);
+  transform: translate3d(0,0,0);
 }
