--- a/assets/stylesheets/main.css
+++ b/assets/stylesheets/main.css
@@ -179,3 +179,10 @@ header .header-content .header-content-inner p {
   -webkit-transform: translate3d(0,0,0);
   transform: translate3d(0,0,0);
 }
+
+.container {
+  margin: 0 auto;
+  padding-left: 30px;
+  padding-right: 30px;
+  width: 960px;
+}
