--- a/assets/stylesheets/main.css
+++ b/assets/stylesheets/main.css
@@ -186,3 +186,9 @@ header .header-content .header-content-inner p {
   padding-right: 30px;
   width: 960px;
 }
+
+.row {
+  background: #fff;
+  min-width: 960px;
+  padding: 66px 0 44px 0;
+}
