--- a/assets/stylesheets/main.css
+++ b/assets/stylesheets/main.css
@@ -192,3 +192,9 @@ header .header-content .header-content-inner p {
   min-width: 960px;
   padding: 66px 0 44px 0;
 }
+
+.square
+{
+  height: 75px;
+  width: 75px;
+}
