--- a/assets/stylesheets/main.css
+++ b/assets/stylesheets/main.css
@@ -21,6 +21,7 @@ header {
   background-position: center;
   background-image: url('webimage.png');
   text-align: center;
+  color: black;
 }
 header .header-content {
   position: relative;
