--- a/assets/stylesheets/main.css
+++ b/assets/stylesheets/main.css
@@ -196,3 +196,24 @@ header .header-content .header-content-inner p {
 	height: auto;
 	float: center;
 }
+
+.nav {
+  text-align: right;
+ text-decoration: none;
+}
+.primary-nav {
+  font-size: 14px;
+  font-weight: 400;
+ letter-spacing: .5px;
+ text-decoration: none
+}
+.nav li {
+  display: inline-block;
+  margin: 0 10px;
+  vertical-align: top;
+ text-decoration: none;
+}
+.nav li:last-child {
+  margin-right: 100px;
+ text-decoration:none;
+}
