--- a/assets/stylesheets/main.css
+++ b/assets/stylesheets/main.css
@@ -249,3 +249,11 @@ header .header-content .header-content-inner p {
   background: linear-gradient(to right, #a1d3b0, #f6f1d3);
   padding: 44px 0 22px 0;
 }
+
+.hero
+ {
+	 position: absolute;
+	 width: 1200px;
+	 margin-left: 0;
+	 margin-top: 0;
+ }
