--- a/assets/stylesheets/main.css
+++ b/assets/stylesheets/main.css
@@ -13,6 +13,7 @@ section {
 
 header {
     width: 100%;
+    height: 250px;
     background-image:url('webimage.png');
 /*  position: relative;
   width: 100%;
