--- a/assets/stylesheets/main.css
+++ b/assets/stylesheets/main.css
@@ -255,3 +255,7 @@ header .header-content .header-content-inner p {
 	 margin-left: 0;
 	 margin-top: 0;
  }
+
+ .headerheight{
+   height: 500px;
+ }
