--- a/assets/stylesheets/main.css
+++ b/assets/stylesheets/main.css
@@ -77,7 +77,7 @@ header .header-content .header-content-inner p {
   }
 }
 .about-section{
-	background-color: #AEC8ED;
+	background-color: #33E5FF;
 	color: #865D57;
 }
 .projects-border > div{
