--- a/assets/stylesheets/main.css
+++ b/assets/stylesheets/main.css
@@ -77,7 +77,7 @@ header .header-content .header-content-inner p {
   }
 }
 .about-section{
-	background-color: #33E5FF;
+	background-color: #A791C5;
 	color: #865D57;
 }
 .projects-border > div{
@@ -86,7 +86,7 @@ header .header-content .header-content-inner p {
 }
 
 .project-section{
-  background-color: #937044;
+  background-color: #A791C5;
 }
 
 /* For the hover effect */
