--- a/assets/stylesheets/main.css
+++ b/assets/stylesheets/main.css
@@ -86,7 +86,7 @@ header .header-content .header-content-inner p {
 }
 
 .project-section{
-  background-color: #A791C5;
+  background-color: #865D57;
 }
 
 /* For the hover effect */
